fixed logo and nav alignment

--- a/main.css
+++ b/main.css
@@ -113,12 +113,12 @@ body header .navigation .nav {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  border: 1px solid red;
 }
 
 body header .navigation .nav .nav__primary-item {
   list-style-type: none;
   padding: 0.5rem;
+  padding-top: 0.9rem !important;
   position: relative;
   border: 1px solid red;
 }
@@ -613,7 +613,7 @@ body header .navigation .nav .employment {
 body header .navigation .nav .employment .show_employment {
   position: absolute;
   left: -31.8rem;
-  width: 60rem;
+  width: 53rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -661,7 +661,6 @@ body
   .show_employment
   .employment__column_four {
   width: 20%;
-  padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -894,7 +893,7 @@ body .arrow-up__about {
   top: -4%;
 }
 body .arrow-up__employment {
-  left: 55%;
+  left: 62.5%;
   top: -7.5%;
 }
 
